<?xml version="1.0" encoding="UTF-8"?>

<android.support.constraint.ConstraintLayout
    tools:layout_editor_absoluteY="10dp"
    tools:layout_editor_absoluteX="13dp"
    tools:context=".IncomeActivity"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:id="@+id/incomeActivity"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RadioGroup
        android:orientation="horizontal"
        android:layout_height="34dp"
        android:layout_width="372dp"
        android:id="@+id/radioGroup_isCash"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintTop_toTopOf="@+id/text_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/edit_amount"
        android:checkedButton="@id/radio_cash"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp">

        <RadioButton
            android:id="@+id/radio_cash"
            android:layout_width="177dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/cash"
            android:textSize="18sp"
            android:visibility="visible" />

        <RadioButton
            android:id="@+id/radio_card"
            android:layout_width="178dp"
            android:layout_height="match_parent"
            android:text="@string/card"
            android:textAllCaps="false"
            android:textSize="18sp" />

    </RadioGroup>

    <TextView
        android:layout_height="66dp"
        android:layout_width="264dp"
        android:id="@+id/text_income"
        app:layout_constraintVertical_bias="0.527"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.028"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/text_date"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/income"
        android:textSize="30sp"
        android:layout_marginTop="8dp"/>

    <EditText
        android:id="@+id/edit_comment"
        android:layout_width="364dp"
        android:layout_height="120dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/comment"
        android:inputType="textMultiLine"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup_category"
        app:layout_constraintVertical_bias="0.095"
        tools:ignore="MissingConstraints" />

    <EditText
        android:layout_height="53dp"
        android:layout_width="304dp"
        android:id="@+id/edit_amount"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.126"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup_category"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:textSize="24sp"
        android:layout_marginTop="212dp" tools:ignore="MissingConstraints"
        android:inputType="number"
        android:hint="@string/amount"
        android:ems="10"
        android:autofillHints=""/>

    <TextView
        android:layout_height="47dp"
        android:layout_width="368dp"
        android:id="@+id/text_date"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.407"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/edit_amount"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:textSize="24sp"
        android:layout_marginTop="112dp"/>

    <TextView
        android:layout_height="46dp"
        android:layout_width="135dp"
        android:id="@+id/text_category"
        app:layout_constraintVertical_bias="0.424"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/category"
        android:textSize="24sp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"/>


    <RadioGroup
        android:orientation="vertical"
        android:layout_height="173dp"
        android:layout_width="364dp"
        android:id="@+id/radioGroup_category"
        app:layout_constraintVertical_bias="0.608"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.354"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <RadioButton
            android:id="@+id/radio_pocketMoney"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/pocketMoney"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radio_salary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/salary"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radio_carry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/carry"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radio_etc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/etc"
            android:textSize="18sp" />

    </RadioGroup>

    <Button
        android:id="@+id/button_save"
        android:layout_width="97dp"
        android:layout_height="53dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/save"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.973"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.024" />

    <TextView
        android:layout_height="56dp"
        android:layout_width="62dp"
        android:id="@+id/text_won"
        app:layout_constraintVertical_bias="0.071"
        app:layout_constraintTop_toTopOf="@+id/radioGroup_isCash"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.963"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/won"
        android:textSize="24sp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>